Criar página Poster #2

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
+@import './ccuffs';
+@import './aura';
+
