--- a/public/assets/lbk/css/main.css
+++ b/public/assets/lbk/css/main.css
@@ -13,9 +13,9 @@
   color: rgb(1,41,112);
   font-weight: 500;
   font-size: 1.2em;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   padding-bottom: 10px;
-  border-bottom: solid 1px rgb(163, 163, 163);
+  border-bottom: solid 1px rgb(203, 222, 255);
 }
 
 #menu p.title:not(:first-child) {
@@ -61,6 +61,8 @@
 
 input[type="file"] {
   height: 3rem;
+  padding-top: 0.5em;
+  padding-left: 0.8em;
 }
 
 /*
