--- a/public/assets/lbk/css/main.css
+++ b/public/assets/lbk/css/main.css
@@ -1,11 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap');
 
+#lbkContainer {
+    width: 100%;
+    margin: 0 auto;
+    padding-top: 120px;
+}
+
 #menu {
-    width: 400px;
+    width: 20%;
     height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
     overflow: scroll;
 }
 
@@ -38,15 +41,16 @@
   opacity: 0.5;
 }
 
+#contentContainer {
+    width: 100%;
+    height: 100%;
+}
+
 #content {
-    width: 1920px;
-    height: 1080px;
-    position: absolute;
-    top: 0;
-    left: 400px;
-    border: 1px solid #343434;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
-    background: #ff00ff;
+    background: #fff;
 }
 
 .file-preview {
