--- a/public/assets/lbk/css/main.css
+++ b/public/assets/lbk/css/main.css
@@ -1,37 +1,28 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap');
 
-body {
-    margin: 0;
-    padding: 0;
+#lbkContainer {
+    width: 100%;
+    margin: 0 auto;
+    padding-top: 120px;
 }
 
 #menu {
-    width: 400px;
+    width: 20%;
     height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
     overflow: scroll;
 }
 
-#menu label {
-  opacity: 0.7;
+#menu p.title {
+  color: rgb(1,41,112);
+  font-weight: 500;
+  font-size: 1.2em;
+  margin-bottom: 20px;
+  padding-bottom: 10px;
+  border-bottom: solid 1px rgb(203, 222, 255);
 }
 
-#menu p.title {
-  opacity: 0.9;
-  font-weight: 500;
-  font-size: 1.1em;
-  margin-top: 15px;
-  margin-bottom: 10px;
-  padding: 6px;
-  background: #101113;
-}
-#menu p.title i {
-  color: #ff8989;
-  opacity: 0.8;
-  font-size: 1.1em;
-  margin-right: 3px;
+#menu p.title:not(:first-child) {
+    margin-top: 2.0rem;
 }
 
 #menu div.wrapper {
@@ -50,15 +41,16 @@ body {
   opacity: 0.5;
 }
 
+#contentContainer {
+    width: 100%;
+    height: 100%;
+}
+
 #content {
-    width: 1920px;
-    height: 1080px;
-    position: absolute;
-    top: 0;
-    left: 400px;
-    border: 1px solid #343434;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
-    background: #ff00ff;
+    background: #fff;
 }
 
 .file-preview {
@@ -73,6 +65,8 @@ body {
 
 input[type="file"] {
   height: 3rem;
+  padding-top: 0.5em;
+  padding-left: 0.8em;
 }
 
 /*
