fix correções de resposividade e design #74

--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -6,6 +6,15 @@
 */
 
 /*--------------------------------------------------------------
+# Menu
+--------------------------------------------------------------*/
+@media (max-width: 1023px) {
+  .oculto {
+    top: -500px;
+  }
+}
+
+/*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
 :root {
